--- a/src/Lamedal_UIWinForms.csproj
+++ b/src/Lamedal_UIWinForms.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Enumerals\enFormPanel.cs" />
     <Compile Include="Enumerals\enFormPanels.cs" />
     <Compile Include="Enumerals\enFormSize.cs" />
+    <Compile Include="Enumerals\enIconShell32Sizes.cs" />
     <Compile Include="Enumerals\enInputControl_CustomAction.cs" />
     <Compile Include="Enumerals\enInputControl_Type.cs" />
     <Compile Include="Enumerals\enInputControl_Width.cs" />
@@ -65,8 +66,6 @@
     <Compile Include="Enumerals\enStandardButtons.cs" />
     <Compile Include="Enumerals\enumValue_Attribute.cs" />
     <Compile Include="Enumerals\enumValue_Controller.cs" />
-    <Compile Include="Events\evAIState_DialogChoicesEventHandler.cs" />
-    <Compile Include="Events\evAIstate_DialogChoices_EventArgs.cs" />
     <Compile Include="Events\evChartHitInfo.cs" />
     <Compile Include="Events\evChartHitInfo_EventArgs.cs" />
     <Compile Include="Events\evDataTable_Commit_PostError.cs" />
@@ -75,18 +74,12 @@
     <Compile Include="Events\evEnum2Control_Changed.cs" />
     <Compile Include="Events\evInput_Control_EventArgs.cs" />
     <Compile Include="Events\evStandardButtons_EventArgs.cs" />
+    <Compile Include="Lamedal_WinForms_Exceptions.cs" />
     <Compile Include="libUI\libUI2_.cs" />
     <Compile Include="libUI\Win32\shell32.cs" />
     <Compile Include="libUI\Win32\shell32_FileInfo.cs" />
     <Compile Include="libUI\Win32\user32.cs" />
     <Compile Include="libUI\WinForms\Callback\Callback_.cs" />
-    <Compile Include="libUI\WinForms\Callback\system_Callback_Tests.cs" />
-    <Compile Include="libUI\WinForms\Callback\system_Callback_TestsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="libUI\WinForms\Callback\system_Callback_TestsForm.Designer.cs">
-      <DependentUpon>system_Callback_TestsForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="libUI\WinForms\Controls\Charts\Charts_.cs" />
     <Compile Include="libUI\WinForms\Controls\Charts\Charts_Mouse.cs" />
     <Compile Include="libUI\WinForms\Controls\Charts\Charts_Setup.cs" />
@@ -132,6 +125,16 @@
     <Compile Include="libUI\Interfaces\IUControl_ObjectModel.cs" />
     <Compile Include="Lamedal_WinForms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="State\stateCache_DataTableFileSetup.cs" />
+    <Compile Include="State\stateCache_DataTableFileSetup_Controller.cs" />
+    <Compile Include="State\stateCallback.cs" />
+    <Compile Include="State\stateChart.cs" />
+    <Compile Include="State\stateChart_Controller.cs" />
+    <Compile Include="State\stateDialog.cs" />
+    <Compile Include="State\stateForm.cs" />
+    <Compile Include="State\stateForm_Controller.cs" />
+    <Compile Include="State\stateProcess.cs" />
+    <Compile Include="State\stateProcess_Controller.cs" />
     <Compile Include="UControl\button\Button_.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -308,10 +311,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="libUI\WinForms\Callback\system_Callback_TestsForm.resx">
-      <DependentUpon>system_Callback_TestsForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="UControl\button\Button_Standard.resx">
       <DependentUpon>Button_Standard.cs</DependentUpon>
     </EmbeddedResource>
@@ -363,11 +362,13 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="State\Readme.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\LamedalCore\src\LamedalCore.csproj">
       <Project>{421feb9f-b016-45bd-98be-9b4889f39057}</Project>
       <Name>LamedalCore</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
