--- a/tests/Lamedal_UIWinForms.Test.csproj
+++ b/tests/Lamedal_UIWinForms.Test.csproj
@@ -72,6 +72,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tests\Html_Test.cs" />
+    <Compile Include="tests\system_Callback_Tests.cs" />
+    <Compile Include="tests\system_Callback_TestsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tests\system_Callback_TestsForm.Designer.cs">
+      <DependentUpon>system_Callback_TestsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +91,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="tests\system_Callback_TestsForm.resx">
+      <DependentUpon>system_Callback_TestsForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
