--- a/src/Lamedal_UIWinForms.csproj
+++ b/src/Lamedal_UIWinForms.csproj
@@ -54,6 +54,7 @@
       <Link>UControl\UIDesigner\UIDesigner_Tools.cs</Link>
     </Compile>
     <Compile Include="Enumerals\enChartEventType.cs" />
+    <Compile Include="Enumerals\enFileDialogType.cs" />
     <Compile Include="Enumerals\enFormPanel.cs" />
     <Compile Include="Enumerals\enFormPanels.cs" />
     <Compile Include="Enumerals\enFormSize.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Enumerals\enInputControl_CustomAction.cs" />
     <Compile Include="Enumerals\enInputControl_Type.cs" />
     <Compile Include="Enumerals\enInputControl_Width.cs" />
+    <Compile Include="Enumerals\enIOFileType.cs" />
     <Compile Include="Enumerals\enPart_Size.cs" />
     <Compile Include="Enumerals\enPart_Type.cs" />
     <Compile Include="Enumerals\enStandardButtons.cs" />
@@ -124,6 +126,15 @@
     <Compile Include="libUI\Interfaces\IUControl_Docking.cs" />
     <Compile Include="libUI\Interfaces\IUControl_ObjectModel.cs" />
     <Compile Include="Lamedal_WinForms.cs" />
+    <Compile Include="lib\dotNet\dotNet_.cs" />
+    <Compile Include="lib\dotNet\dotNet_Assembly.cs" />
+    <Compile Include="lib\dotNet\dotNet_ClassAttribute.cs" />
+    <Compile Include="lib\dotNet\dotNet_Resources.cs" />
+    <Compile Include="lib\dotNet\dotNet_Stream_Object2Str.cs" />
+    <Compile Include="lib\dotNet\stateAssemblyFilters.cs" />
+    <Compile Include="lib\lib2_.cs" />
+    <Compile Include="lib\system\system_.cs" />
+    <Compile Include="lib\system\system_Registry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\stateCache_DataTableFileSetup.cs" />
     <Compile Include="State\stateCache_DataTableFileSetup_Controller.cs" />
@@ -306,6 +317,8 @@
     </Compile>
     <Compile Include="UControl\_Designer\TextBox_Designer.cs" />
     <Compile Include="zzz\UIWindows_Shortcut.cs" />
+    <Compile Include="zzz\UI_Controls_Shortcut.cs" />
+    <Compile Include="zzz\zFend_Dialogs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -370,5 +383,6 @@
       <Name>LamedalCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
