refactor of domain definitions

--- a/src/Lamedal_UIWinForms.csproj
+++ b/src/Lamedal_UIWinForms.csproj
@@ -53,34 +53,27 @@
     <Compile Include="..\..\..\lamedal\trunk\lamedalport\lamedalport.uiwindows\libui\winforms\uidesigner\UIDesigner_Tools.cs">
       <Link>UControl\UIDesigner\UIDesigner_Tools.cs</Link>
     </Compile>
-    <Compile Include="Enumerals\enChartEventType.cs" />
-    <Compile Include="Enumerals\enFileDialogType.cs" />
-    <Compile Include="Enumerals\enFormPanel.cs" />
-    <Compile Include="Enumerals\enFormPanels.cs" />
-    <Compile Include="Enumerals\enFormSize.cs" />
-    <Compile Include="Enumerals\enIconShell32Sizes.cs" />
-    <Compile Include="Enumerals\enInputControl_CustomAction.cs" />
-    <Compile Include="Enumerals\enInputControl_Type.cs" />
-    <Compile Include="Enumerals\enInputControl_Width.cs" />
-    <Compile Include="Enumerals\enIOFileType.cs" />
-    <Compile Include="Enumerals\enPart_Size.cs" />
-    <Compile Include="Enumerals\enPart_Type.cs" />
-    <Compile Include="Enumerals\enStandardButtons.cs" />
-    <Compile Include="Enumerals\enumValue_Attribute.cs" />
-    <Compile Include="Enumerals\enumValue_Controller.cs" />
-    <Compile Include="Events\evChartHitInfo.cs" />
-    <Compile Include="Events\evChartHitInfo_EventArgs.cs" />
-    <Compile Include="Events\evDataTable_Commit_PostError.cs" />
-    <Compile Include="Events\evDataTable_Commit_Pre.cs" />
-    <Compile Include="Events\event_Handlers.cs" />
-    <Compile Include="Events\evEnum2Control_Changed.cs" />
-    <Compile Include="Events\evInput_Control_EventArgs.cs" />
-    <Compile Include="Events\evStandardButtons_EventArgs.cs" />
+    <Compile Include="domain\Enumerals\enControl_ChartEvent.cs" />
+    <Compile Include="domain\Enumerals\enDialog_FileIO.cs" />
+    <Compile Include="domain\Enumerals\enForm_Panel.cs" />
+    <Compile Include="domain\Enumerals\enForm_Panels.cs" />
+    <Compile Include="domain\Enumerals\enForm_Size.cs" />
+    <Compile Include="domain\Enumerals\enControl_InputCustomAction.cs" />
+    <Compile Include="domain\Enumerals\enControl_InputType.cs" />
+    <Compile Include="domain\Enumerals\enControl_InputWidth.cs" />
+    <Compile Include="domain\Enumerals\enDialog_FileIOType.cs" />
+    <Compile Include="domain\Enumerals\enControl_PartSize.cs" />
+    <Compile Include="domain\Enumerals\enControl_PartType.cs" />
+    <Compile Include="domain\Enumerals\enControl_StandardButtons.cs" />
+    <Compile Include="domain\Events\onChart_HitInfo.cs" />
+    <Compile Include="domain\Events\onChart_HitInfoEventArgs.cs" />
+    <Compile Include="domain\Events\onForm_Enum2Control_Changed.cs" />
+    <Compile Include="domain\Events\onInputControl_EventArgs.cs" />
+    <Compile Include="domain\Events\onStandardButtons_EventArgs.cs" />
     <Compile Include="Lamedal_WinForms_Exceptions.cs" />
     <Compile Include="libUI\Interfaces\IForms_Setup.cs" />
     <Compile Include="libUI\Interfaces\IForms_SetupSubForm.cs" />
     <Compile Include="libUI\libUI2_.cs" />
-    <Compile Include="libUI\Win32\shell32.cs" />
     <Compile Include="libUI\Win32\shell32_FileInfo.cs" />
     <Compile Include="libUI\Win32\user32.cs" />
     <Compile Include="libUI\WinForms\Callback\Callback_.cs" />
